syntax = "proto3";

package test.maps;

option go_package = "github.com/masaya-saito/protojson/proto/maps";

// MapFields tests map fields with various key/value types
message MapFields {
  map<string, string> string_map = 1;
  map<string, int32> int_map = 2;
  map<string, bool> bool_map = 3;
  map<int32, string> int_key_map = 4;
  map<string, Value> message_map = 5;
}

message Value {
  string data = 1;
  int32 count = 2;
}

// NestedMaps tests nested map structures
message NestedMaps {
  map<string, InnerMap> outer_map = 1;
}

message InnerMap {
  map<string, string> inner = 1;
}

// EmptyMaps tests empty map fields
message EmptyMaps {
  map<string, string> empty_string_map = 1;
  map<string, Value> empty_message_map = 2;
}
